# mesh-util

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
cpp/: CMakeLists.txt  main.cpp
cpp/basic/include/: config.hpp  cuda_helper.hpp  log.hpp  math.hpp  option.hpp  options.hpp
cpp/basic/src/: cuda_helper.cu  log.cpp  math.cpp  option.cpp  options.cpp
cpp/tet/include/: tet_boundary_face_pipeline.cuh  tet_connected_component.hpp  tet_cross_section.cuh  tet_poisson_assembler.cuh  tet_surface_mesh_extractor.cuh  tet_visualizer.cuh
cpp/tet/src/: tet_connected_component.cpp  tet_cross_section.cu  tet_poisson_assembler.cu  tet_surface_mesh_extractor.cu  tet_visualizer.cu
python/: config.py  test_conn.py  test_conn_all.py  test_conn_water_all.py  test_split.py  test_surf.py  tet_mesh.py  vis_ngl.py
python/1314/: elems_tetra.npy  vert_tetra.npy
