# Modified from the official example:
# https://github.com/pybind/cmake_example/blob/master/pyproject.toml.
# We didn't use pytest, but it does not hurt to keep it.

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja==1.11.1.1",
    "cmake==3.28",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
# Setuptools bug causes collision between pypy and cpython artifacts
before-build = "rm -rf {project}/build"